--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,25 +8,34 @@ set(CMAKE_C_COMPILER gcc) # gcc, clang or cl
 # set(CMAKE_C_FLAGS_DEBUG "-v -fdiagnostics-color=always -m64 -O0 -g3 -Wpedantic -fsanitize=undefined -fsanitize-trap=all -lpthread -std=c${CMAKE_C_STANDARD}" CACHE STRING "" FORCE)
 # set(CMAKE_C_FLAGS_RELEASE "-v -fdiagnostics-color=always -m64 -O3 -g0 -Wpedantic -std=c${CMAKE_C_STANDARD}" CACHE STRING "" FORCE)
 # set(CMAKE_C_FLAGS_RELWITHDEBINFO "-v -fdiagnostics-color=always -m64 -O2 -g3 -Wpedantic -std=c${CMAKE_C_STANDARD}" CACHE STRING "" FORCE)
+# The option -DNDEBUG disables all runtime asserts, AKA C-asserts
 
 set(CMAKE_C_FLAGS_DEBUG "-fdiagnostics-color=always -m64 -O0 -g3 -Wpedantic -std=c${CMAKE_C_STANDARD}" CACHE STRING "" FORCE)
-set(CMAKE_C_FLAGS_RELEASE "-fdiagnostics-color=always -m64 -O3 -g0 -Wpedantic -std=c${CMAKE_C_STANDARD}" CACHE STRING "" FORCE)
 set(CMAKE_C_FLAGS_RELWITHDEBINFO "-fdiagnostics-color=always -m64 -O2 -g3 -Wpedantic -std=c${CMAKE_C_STANDARD}" CACHE STRING "" FORCE)
+set(CMAKE_C_FLAGS_RELEASE "-fdiagnostics-color=always -m64 -DNDEBUG -O3 -g0 -Wpedantic -std=c${CMAKE_C_STANDARD}" CACHE STRING "" FORCE)
 
 # Select the C++ standard and compiler
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_CXX_COMPILER g++) # g++, clang++ or cl
 
-set(CMAKE_CXX_FLAGS_DEBUG "-v -fdiagnostics-color=always -m64 -O0 -g3 -Wpedantic -std=c${CMAKE_C_STANDARD}" CACHE STRING "" FORCE)
-set(CMAKE_CXX_FLAGS_RELEASE "-v -fdiagnostics-color=always -m64 -O3 -g0 -Wpedantic -std=c${CMAKE_C_STANDARD}" CACHE STRING "" FORCE)
-set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-v -fdiagnostics-color=always -m64 -O2 -g3 -Wpedantic -std=c${CMAKE_C_STANDARD}" CACHE STRING "" FORCE)
+set(CMAKE_CXX_FLAGS_DEBUG "-v -fdiagnostics-color=always -m64 -O0 -g3 -Wpedantic -std=c++${CMAKE_CXX_STANDARD}" CACHE STRING "" FORCE)
+set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-v -fdiagnostics-color=always -m64 -O2 -g3 -Wpedantic -std=c++${CMAKE_CXX_STANDARD}" CACHE STRING "" FORCE)
+set(CMAKE_CXX_FLAGS_RELEASE "-v -fdiagnostics-color=always -m64 -DNDEBUG -O3 -g0 -Wpedantic -std=c++${CMAKE_CXX_STANDARD}" CACHE STRING "" FORCE)
 
 project(CppFightingGame VERSION 0.0.1 LANGUAGES CXX)
 
 # If the user doesn't provide a build type, choose Debug by default
 if (NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Debug CACHE STRING "" FORCE)
+endif()
+
+if(CMAKE_BUILD_TYPE)
+	message("\nUsing configuraton generation with the ${CMAKE_BUILD_TYPE} configuration type!\n")
+	set_property(CACHE CMAKE_BUILD_TYPE PROPERTY VALUE "${CMAKE_BUILD_TYPE}")
+else()
+	message("Defaulting to Debug build.\n")
+	set_property(CACHE CMAKE_BUILD_TYPE PROPERTY VALUE "Debug")
 endif()
 
 # Adds the CMakeLists.txt of the Raylib submodule to compile it and link it
